Maps navigation icons distortion fix

--- a/styl/index.styl
+++ b/styl/index.styl
@@ -530,7 +530,10 @@ body
 
 #map
   width: 100%;
-  height: 100%;
+  height: 500px;
+  
+  & img
+    max-width: inherit;
   
 .info-popup
   color: #114476;
